# Garbage-classification-kubernetes

./: .gitignore  Dockerfile.api  README.md  app.py  pyproject.toml  test.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
models/: Dockerfile  garbage-model-keras.ipynb  garbage_final_model.ipynb  labels.json  verify-onnx.py
